[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "instaloader>=4.14.1",
    "pillow>=11.2.1",
    "pyperclip>=1.8.2",
    "requests>=2.32.3",
    "streamlit-extras>=0.7.1",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
]
